<resources>
    <string name="app_name">Promobit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Example User</string>
    <string name="nav_header_subtitle">example@email.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_a_z">A-Z</string>
    <string name="action_z_a">Z-A</string>

    <string name="menu_home">Meus Contatos</string>
    <string name="menu_gallery">Adicionar Contatos</string>
    <string name="menu_cartao">Cartões</string>
    <string name="menu_exit">Sair</string>

    <string name="label_nome_sobrenome">Nome e Sobrenome</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_email">E-mail</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_site">Site</string>
    <string name="label_adicionar_nota">Adicionar Nota</string>
    <string name="label_salvar">Salvar</string>
    <string name="label_cancelar">Cancelar</string>

    <string name="deseja_realmente_sair">Deseja realmente sair?</string>
    <string name="titulo_aviso">Aviso!</string>

    <string name="regras_senha">Senha com letra maiuscula, um caracter especial e número</string>
    <string name="servico_indisponivel">Falha ao tentar conectar com o serviço!</string>
    <string name="texto_sim">SIM</string>
    <string name="texto_mensagem">Message</string>
    <string name="texto_titulo">Título</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name"><b>%s | </b>%s</string>
    <string name="preencha_corretamente">Preencha com email válido</string>
    <string name="preencha_cpf_corretamente">Preencha com CPF válido</string>

    <string name="is_empty_email">Qual é o email?</string>
    <string name="preencha_senha">Qual é sua senha?</string>
    <string name="is_empty_site">Qual é o site?</string>
    <string name="is_empty_phone">Qual é o telefone?</string>
    <string name="is_empty_custom_note">Insira uma nota</string>
    <string name="is_empty_company">Qual é a empresa?</string>
    <string name="is_empty_name">Qual é o nome?</string>
    <string name="item_points">⋮</string>
    <string name="label_new">NOVO</string>
    <string name="contact_is_empty">Você ainda não possui contatos</string>
    <string name="item_menu_name">Nome</string>
    <string name="item_menu_company">Empresa</string>
    <string name="label_exit">Sair</string>
    <string name="add_contacts">Add contacts</string>
</resources>