<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.form.FormFragment">

    <data>

        <import type="com.seletivo.promobit.enums.Status" />

        <variable
            name="status"
            type="com.seletivo.promobit.enums.Status" />

        <variable
            name="resource"
            type="com.seletivo.promobit.gateway.resource.Resource" />

        <variable
            name="contacts"
            type="com.seletivo.promobit.ui.form.ContactObservable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="false"
            app:layout_constraintBottom_toTopOf="@+id/flexBoxLayBtnsId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="column">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayNameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldNameId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_nome_sobrenome"
                        android:inputType="textCapWords"
                        android:maxLength="32"
                        android:singleLine="true"
                        android:text="@={contacts.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayCompanyId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayNameId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldCompanyId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_empresa"
                        android:inputType="textCapWords"
                        android:maxLength="32"
                        android:singleLine="true"
                        android:text="@={contacts.company}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayCompanyId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="32"
                        android:singleLine="true"
                        android:text="@={contacts.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayPhoneId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayEmailId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldPhoneId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_telefone"
                        android:inputType="numberSigned"
                        android:maxLength="32"
                        android:singleLine="true"
                        android:text="@={contacts.phone}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLaySiteId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayPhoneId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldSiteId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_site"
                        android:inputType="textWebEmailAddress"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:text="@={contacts.website}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayCustomNoteId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLaySiteId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFieldCustomNoteId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_adicionar_nota"
                        android:inputType="textAutoComplete"
                        android:maxLength="100"
                        android:singleLine="false"
                        android:text="@={contacts.customNote}" />

                </com.google.android.material.textfield.TextInputLayout>


            </com.google.android.flexbox.FlexboxLayout>

        </ScrollView>


        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexBoxLayBtnsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_btn_cancel_drawable"
                android:enabled="true"
                android:text="@string/label_cancelar"
                android:textColor="@color/solid_btn_color"
                app:enableDisableButtonCancel="@{resource.status != Status.LOADING}"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveContactId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_btn_drawable"
                android:text="@string/label_salvar"
                android:textColor="@color/white"
                android:enabled="false"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:visibleGone="@{resource.status != Status.LOADING}" />

            <ProgressBar
                android:id="@+id/progressBarSaveId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:visibleGone="@{resource.status == Status.LOADING}" />

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>